--- a/r-cat/Cargo.toml
+++ b/r-cat/Cargo.toml
@@ -5,3 +5,7 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.3.11", features = ["derive"] }
+
+[dev-dependencies]
+assert_cmd = "2.0.12"
+predicates = "3.0.4"
