--- a/r-head/Cargo.toml
+++ b/r-head/Cargo.toml
@@ -7,4 +7,5 @@ edition = "2021"
 clap = { version = "4.3.11", features = ["derive"] }
 
 [dev-dependencies]
-snapbox = "0.4.14"
+assert_cmd = "2.0.12"
+predicates = "3.0.4"
